[gd_scene load_steps=33 format=3 uid="uid://ccif10q54n186"]

[ext_resource type="Script" path="res://scripts/gamemanager/player.gd" id="1_fg56q"]
[ext_resource type="Texture2D" uid="uid://bxvfclgjrymeh" path="res://assets/game scene/player/1. idle/idleFront.png" id="1_muyib"]
[ext_resource type="Texture2D" uid="uid://ds4cggnss8k0b" path="res://assets/game scene/player/2. walk/walkBack.png" id="2_phclp"]
[ext_resource type="Texture2D" uid="uid://nqlgwbyrr8j4" path="res://assets/game scene/player/2. walk/walkFront.png" id="3_lo6qi"]
[ext_resource type="Texture2D" uid="uid://dbafqmnqkjav2" path="res://assets/game scene/player/2. walk/walkSide.png" id="4_l26iu"]
[ext_resource type="Texture2D" uid="uid://dargc1irabnv5" path="res://assets/main menu/cherry blossom/petal.png" id="6_2tc0f"]
[ext_resource type="FontFile" uid="uid://bk7361xbo187n" path="res://assets/main menu/font/8-bit Arcade In.ttf" id="7_4cyld"]
[ext_resource type="FontFile" uid="uid://qqb2denodul0" path="res://assets/main menu/font/VCR_OSD_MONO_1.001.ttf" id="8_jnfmd"]
[ext_resource type="Texture2D" uid="uid://4td1lgenscoa" path="res://assets/main menu/cherry blossom/white_petal.png" id="9_btoi0"]
[ext_resource type="Texture2D" uid="uid://b86egw1iqdeh1" path="res://assets/game scene/house/cutting tools/wood.png" id="10_bs633"]
[ext_resource type="Texture2D" uid="uid://b1tdionh5wgb3" path="res://assets/game scene/shop/coin.png" id="11_42f0d"]
[ext_resource type="Texture2D" uid="uid://6rv3r3np62oy" path="res://assets/main menu/button/pause.png" id="12_mblqq"]
[ext_resource type="Texture2D" uid="uid://rbqvxh4i5pxb" path="res://assets/main menu/button/buttonTexture.png" id="12_mpnk1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qovnl"]
atlas = ExtResource("2_phclp")
region = Rect2(0, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ychjl"]
atlas = ExtResource("1_muyib")
region = Rect2(0, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6rph"]
atlas = ExtResource("1_muyib")
region = Rect2(32, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_om5oo"]
atlas = ExtResource("1_muyib")
region = Rect2(64, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_62x5y"]
atlas = ExtResource("1_muyib")
region = Rect2(96, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_knyly"]
atlas = ExtResource("2_phclp")
region = Rect2(0, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_xr85c"]
atlas = ExtResource("2_phclp")
region = Rect2(32, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxwmk"]
atlas = ExtResource("2_phclp")
region = Rect2(64, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_5teuf"]
atlas = ExtResource("3_lo6qi")
region = Rect2(0, 0, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_eppks"]
atlas = ExtResource("3_lo6qi")
region = Rect2(32, 0, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dae2"]
atlas = ExtResource("3_lo6qi")
region = Rect2(64, 0, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_62nkw"]
atlas = ExtResource("4_l26iu")
region = Rect2(0, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_nh3s7"]
atlas = ExtResource("4_l26iu")
region = Rect2(32, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_8sxdd"]
atlas = ExtResource("4_l26iu")
region = Rect2(64, 0, 32, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_sw13d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qovnl")
}],
"loop": true,
"name": &"idleBack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ychjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6rph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_om5oo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62x5y")
}],
"loop": true,
"name": &"idleFront",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_knyly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xr85c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxwmk")
}],
"loop": true,
"name": &"walkBack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5teuf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eppks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dae2")
}],
"loop": false,
"name": &"walkFront",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_62nkw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nh3s7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8sxdd")
}],
"loop": false,
"name": &"walkRight",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6xoj7"]
radius = 6.0
height = 62.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0jutk"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_njg7g"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ewc2"]
bg_color = Color(0.6, 0.6, 0.6, 0.235294)

[node name="Player" type="CharacterBody2D"]
position = Vector2(262, 168)
script = ExtResource("1_fg56q")

[node name="player_sprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(38.5, 39.5)
scale = Vector2(3.40625, 3.19444)
sprite_frames = SubResource("SpriteFrames_sw13d")
animation = &"idleFront"
autoplay = "idleFront"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(41, 42)
shape = SubResource("CapsuleShape2D_6xoj7")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-3, 0)
zoom = Vector2(1.895, 1.895)
limit_left = 0
limit_top = 0
limit_right = 1152
limit_bottom = 648

[node name="PlayerCanvas" type="CanvasLayer" parent="Camera2D"]

[node name="Collected" type="Control" parent="Camera2D/PlayerCanvas"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -544.0
offset_bottom = -305.0
grow_horizontal = 2
grow_vertical = 2

[node name="1_ OkamaPetals" type="Node" parent="Camera2D/PlayerCanvas/Collected"]

[node name="Petal" type="Sprite2D" parent="Camera2D/PlayerCanvas/Collected/1_ OkamaPetals"]
position = Vector2(14, 11)
scale = Vector2(1.25, 1.25)
texture = ExtResource("6_2tc0f")

[node name="Label" type="Label" parent="Camera2D/PlayerCanvas/Collected/1_ OkamaPetals"]
offset_left = 24.0
offset_top = 3.0
offset_right = 37.0
offset_bottom = 21.0
theme_override_fonts/font = ExtResource("7_4cyld")
theme_override_font_sizes/font_size = 26
text = "x"
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="Camera2D/PlayerCanvas/Collected/1_ OkamaPetals"]
offset_left = 37.0
offset_top = -5.0
offset_right = 78.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("8_jnfmd")
theme_override_font_sizes/font_size = 31
text = "0"
metadata/_edit_use_anchors_ = true

[node name="2_ WeepingPetals" type="Node" parent="Camera2D/PlayerCanvas/Collected"]

[node name="WhitePetal" type="Sprite2D" parent="Camera2D/PlayerCanvas/Collected/2_ WeepingPetals"]
position = Vector2(12.75, 37.5)
scale = Vector2(1.28125, 1.3125)
texture = ExtResource("9_btoi0")

[node name="Label" type="Label" parent="Camera2D/PlayerCanvas/Collected/2_ WeepingPetals"]
offset_left = 25.0
offset_top = 29.0
offset_right = 38.0
offset_bottom = 47.0
theme_override_fonts/font = ExtResource("7_4cyld")
theme_override_font_sizes/font_size = 26
text = "x"
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="Camera2D/PlayerCanvas/Collected/2_ WeepingPetals"]
offset_left = 38.0
offset_top = 20.0
offset_right = 79.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("8_jnfmd")
theme_override_font_sizes/font_size = 31
text = "0"
metadata/_edit_use_anchors_ = true

[node name="3_ Wood" type="Node" parent="Camera2D/PlayerCanvas/Collected"]

[node name="wood" type="Sprite2D" parent="Camera2D/PlayerCanvas/Collected/3_ Wood"]
position = Vector2(13, 64)
scale = Vector2(1.52941, 1.66667)
texture = ExtResource("10_bs633")

[node name="Label" type="Label" parent="Camera2D/PlayerCanvas/Collected/3_ Wood"]
offset_left = 25.0
offset_top = 59.0
offset_right = 38.0
offset_bottom = 77.0
theme_override_fonts/font = ExtResource("7_4cyld")
theme_override_font_sizes/font_size = 26
text = "x"
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="Camera2D/PlayerCanvas/Collected/3_ Wood"]
offset_left = 40.0
offset_top = 48.0
offset_right = 81.0
offset_bottom = 76.0
theme_override_fonts/font = ExtResource("8_jnfmd")
theme_override_font_sizes/font_size = 31
text = "0"
metadata/_edit_use_anchors_ = true

[node name="4_ Coin" type="Node" parent="Camera2D/PlayerCanvas/Collected"]

[node name="coins" type="Sprite2D" parent="Camera2D/PlayerCanvas/Collected/4_ Coin"]
position = Vector2(486, 20)
scale = Vector2(1.52941, 1.66667)
texture = ExtResource("11_42f0d")

[node name="Label" type="Label" parent="Camera2D/PlayerCanvas/Collected/4_ Coin"]
anchors_preset = -1
anchor_top = -0.00925926
anchor_right = 0.0138889
offset_left = 512.0
offset_top = 15.0
offset_right = 525.0
offset_bottom = 37.0
theme_override_fonts/font = ExtResource("7_4cyld")
theme_override_font_sizes/font_size = 41
text = "x"
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="Camera2D/PlayerCanvas/Collected/4_ Coin"]
anchors_preset = -1
anchor_right = 0.0321181
anchor_bottom = 0.0169753
offset_left = 536.0
offset_top = -1.0
offset_right = 577.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("8_jnfmd")
theme_override_font_sizes/font_size = 41
text = "0"
metadata/_edit_use_anchors_ = true

[node name="Pause" type="Node2D" parent="Camera2D/PlayerCanvas/Collected"]

[node name="TextureButton" type="TextureButton" parent="Camera2D/PlayerCanvas/Collected/Pause"]
offset_left = 472.0
offset_top = 51.0
offset_right = 512.0
offset_bottom = 91.0
texture_normal = ExtResource("12_mblqq")

[node name="Label3" type="Label" parent="Camera2D/PlayerCanvas/Collected/Pause"]
anchors_preset = -1
anchor_top = -0.00925926
anchor_right = 0.0138889
offset_left = 509.0
offset_top = 50.0
offset_right = 604.0
offset_bottom = 76.0
theme_override_fonts/font = ExtResource("7_4cyld")
theme_override_font_sizes/font_size = 38
text = "Pause"
metadata/_edit_use_anchors_ = true

[node name="PauseMenu" type="Control" parent="Camera2D/PlayerCanvas"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Camera2D/PlayerCanvas/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.408329, 0.408329, 0.408329, 0.431373)

[node name="quit" type="Node2D" parent="Camera2D/PlayerCanvas/PauseMenu"]

[node name="ButtonTexture" type="Sprite2D" parent="Camera2D/PlayerCanvas/PauseMenu/quit"]
position = Vector2(147, 264)
scale = Vector2(1.27344, 1.625)
texture = ExtResource("12_mpnk1")

[node name="quit" type="Button" parent="Camera2D/PlayerCanvas/PauseMenu/quit"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 41.0
offset_top = 227.0
offset_right = 267.0
offset_bottom = 288.0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_4cyld")
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = SubResource("StyleBoxFlat_0jutk")
theme_override_styles/hover = SubResource("StyleBoxFlat_njg7g")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8ewc2")
text = "QUIT"

[node name="continue" type="Node2D" parent="Camera2D/PlayerCanvas/PauseMenu"]

[node name="ButtonTexture" type="Sprite2D" parent="Camera2D/PlayerCanvas/PauseMenu/continue"]
position = Vector2(143, 197.438)
scale = Vector2(1.85938, 1.34766)
texture = ExtResource("12_mpnk1")

[node name="continue" type="Button" parent="Camera2D/PlayerCanvas/PauseMenu/continue"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 52.0
offset_top = 166.0
offset_right = 278.0
offset_bottom = 221.0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_4cyld")
theme_override_font_sizes/font_size = 46
theme_override_styles/normal = SubResource("StyleBoxFlat_0jutk")
theme_override_styles/hover = SubResource("StyleBoxFlat_njg7g")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8ewc2")
text = "CONTINUE"

[node name="return" type="Node2D" parent="Camera2D/PlayerCanvas/PauseMenu"]

[node name="ButtonTexture" type="Sprite2D" parent="Camera2D/PlayerCanvas/PauseMenu/return"]
position = Vector2(150.5, 134.875)
scale = Vector2(2.35156, 1.44531)
texture = ExtResource("12_mpnk1")

[node name="Return" type="Button" parent="Camera2D/PlayerCanvas/PauseMenu/return"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 67.0
offset_top = 107.0
offset_right = 293.0
offset_bottom = 162.0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_4cyld")
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_0jutk")
theme_override_styles/hover = SubResource("StyleBoxFlat_njg7g")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8ewc2")
text = "RETURN TO MAIN MENU"

[connection signal="pressed" from="Camera2D/PlayerCanvas/Collected/Pause/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="Camera2D/PlayerCanvas/PauseMenu/quit/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Camera2D/PlayerCanvas/PauseMenu/continue/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Camera2D/PlayerCanvas/PauseMenu/return/Return" to="." method="_on_return_pressed"]
